--- a/templates/tiers.html
+++ b/templates/tiers.html
@@ -11,6 +11,17 @@
 <body>
 <div class="container">
     <h1>Smogon EDH Tiers</h1>
+    {% if errors|length > 0 %}
+    <div class="row">
+        <div class="alert alert-danger" role="alert">
+            <ul>
+            {% for error in errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+        </div>
+    </div>
+    {% endif %}
     <div class="row">
         {% for tier in tiers %}
             <div class="col-6">
