--- a/templates/tiers.html
+++ b/templates/tiers.html
@@ -11,6 +11,14 @@
 <body>
 <div class="container">
     <h1>Smogon EDH Tiers</h1>
+    <div class="row">
+        <div class="col-sm">
+            <button onclick="window.print()"></button>
+        </div>
+        <div class="col-sm">
+            <button onclick="window.print()"></button>
+        </div>
+    </div>
     {% if errors|length > 0 %}
     <div class="row">
         <div class="alert alert-danger" role="alert">
