fix button styling

--- a/templates/tiers.html
+++ b/templates/tiers.html
@@ -13,10 +13,7 @@
     <h1>Smogon EDH Tiers</h1>
     <div class="row">
         <div class="col-sm">
-            <button onclick="window.print()"></button>
-        </div>
-        <div class="col-sm">
-            <button onclick="window.print()"></button>
+            <button class="btn btn-primary" onclick="window.print()">Print</button>
         </div>
     </div>
     {% if errors|length > 0 %}
